added necessary dependencies in build